fix(VAlert): VAlert Always in Dark Mode
fixes #11021

--- a/packages/vuetify/src/components/VSheet/VSheet.sass
+++ b/packages/vuetify/src/components/VSheet/VSheet.sass
@@ -3,7 +3,7 @@
 
 // Theme
 +theme(v-sheet) using ($material)
-  background-color: map-get($material, 'cards')
+  background-color: map-get($material, 'cards') !important
   border-color: map-get($material, 'cards')
   color: map-deep-get($material, 'text', 'primary')
 
